--- a/ntp.conf
+++ b/ntp.conf
@@ -6,10 +6,15 @@ filegen loopstats file loopstats type day enable
 filegen loopstats file peerstats type day enable
 filegen loopstats file clockstats type day enable
 
-server 0.pool.ntp.org
-server 1.pool.ntp.org
-server 2.pool.ntp.org
-server 3.pool.ntp.org
+#server 0.pool.ntp.org
+#server 1.pool.ntp.org
+#server 2.pool.ntp.org
+#server 3.pool.ntp.org
+
+server time1.google.com
+server time2.google.com
+server time3.google.com
+server time4.google.com
 
 restrict -4 default kod notrap nomodify nopeer noquery limited
 restrict -6 default kod notrap nomodify nopeer noquery limited
